# v2ex-feed

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-image.yml
src/v2ex_feed/: cli.py  logger_cfg.py  main.py  models.py  queueing.py  rss_tasks.py  settings.py  telegram_html_formatter.py  telegram_utils.py
