[project]
name = "v2ex-feed"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.18",
    "aiolimiter>=1.2.1",
    "aiosqlite>=0.21.0",
    "apscheduler>=3.11.0",
    "feedparser>=6.0.11",
    "html-sanitizer>=2.5.0",
    "loguru>=0.7.3",
    "lxml>=5.4.0",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.0",
    "python-telegram-bot>=22.0",
    "tenacity>=9.1.2",
    "tortoise-orm>=0.25.0",
    "typer>=0.15.3",
]

[project.scripts]
v2ex-feed = "v2ex_feed.cli:app"

[tool.uv]
package = true

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
